# GDeflateCore

./: .gitignore  README.md  meson.build
.github/workflows/: meson.yml
include/: GDeflate.h  GDeflateCore.h
src/: GDeflateCompress.cpp  GDeflateDecompress.cpp
subprojects/: GDeflate.wrap
subprojects/packagefiles/GDeflate/: meson.build
